# ConvoGenerator

./: .gitignore  README.md  conversation_generator.py  ds_explore.ipynb  environment_simulator.py  generate_dataset.py  generate_from_transcription.py  generate_speech_dataset.py  get_model.py  hf_dataset.py  pyproject.toml  user_simulator.py
bengali_speech_dataset/: metadata.jsonl
output/: dialogue_dataset_20260228_232640.json  dialogue_dataset_20260301_002324.json
output_g4b/: dialogue_dataset_20260425_194111.json
