[project]
name = "tsbugger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.5.0",
    "google-genai>=1.65.0",
    "huggingface-hub>=1.4.1",
    "openai>=2.20.0",
    "pandas>=3.0.0",
    "pyarrow>=23.0.0",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "tqdm>=4.67.3",
]
